<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="180dp"
    tools:context=".CategoryDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/general_text"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:textSize="20dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/options_text" />

        <TextView
            android:id="@+id/modify_limit_option_dialog"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_marginStart="16dp"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:text="@string/modify_limit_text" />

        <TextView
            android:id="@+id/new_register_option_dialog"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:textSize="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/new_register_text" />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>