<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_format"
    tools:context=".ui.TipDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Dialog"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_format2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textView_tipDialogFragment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_do_savings_work_title"
            style="@style/main_title_text"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/Dialog"
            app:layout_constraintTop_toTopOf="@id/Dialog"
            app:layout_constraintEnd_toEndOf="@id/Dialog"
            android:layout_marginTop="@dimen/margin_32dp"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:textSize="@dimen/subtitle_text_size"
            />

        <TextView
            android:id="@+id/textView_tipDialogFragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/savings_explanation_text"
            style="@style/general_text"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="@id/Dialog"
            app:layout_constraintTop_toBottomOf="@id/textView_tipDialogFragment_title"
            app:layout_constraintEnd_toEndOf="@id/Dialog"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:textSize="@dimen/general_text_size"
        />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_savingsFragment_moreInfo"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="@dimen/margin_16dp"
            android:text="@string/more_info_text"
            android:textColor="@color/ube"
            android:textSize="@dimen/general_text_size"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:layout_constraintBottom_toTopOf="@id/button_savingsFragment_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_tipDialogFragment_text"
            app:strokeColor="@color/gray" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_savingsFragment_close"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:fontFamily="@font/montserrat_bold"
            android:padding="@dimen/margin_16dp"
            android:text="@string/close_text_dialog"
            android:textColor="@color/gray"
            android:textSize="@dimen/general_text_size"
            app:cornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_savingsFragment_moreInfo"
            app:strokeColor="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>