<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.NewUserFragment"
    android:background="@drawable/new_user_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_height1"
        android:background="@drawable/new_user_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/main_title_text"
        android:textSize="@dimen/main_title_text_size"
        android:fontFamily="@font/montserrat_medium"
        android:textStyle="bold"
        android:text="@string/crear_usuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/ube"
        android:layout_marginTop="@dimen/main_title_text_top_margin"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_newUserFragment_email"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_newUserFragment_username"
        android:hint="@string/email"

        app:boxCornerRadiusBottomEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusBottomStart="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopStart="@dimen/dialog_format_radius"

        android:layout_marginStart="@dimen/main_title_text_top_margin"
        android:layout_marginEnd="@dimen/main_title_text_top_margin"
        android:layout_marginTop="@dimen/margin_16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="16dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_newUserFragment_password"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_newUserFragment_email"
        android:hint="@string/password"

        app:boxCornerRadiusBottomEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusBottomStart="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopStart="@dimen/dialog_format_radius"

        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/margin_16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/margin_16dp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_newUserFragment_username"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:hint="@string/name"

        app:boxCornerRadiusBottomEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopEnd="@dimen/dialog_format_radius"
        app:boxCornerRadiusBottomStart="@dimen/dialog_format_radius"
        app:boxCornerRadiusTopStart="@dimen/dialog_format_radius"

        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginTop="@dimen/return_arrow_margin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/margin_16dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_loginFragment_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_newUserFragment_password"
        android:text="@string/crear_cuenta"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/general_text_size"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:backgroundTint="@color/ube"
        android:padding="@dimen/margin_16dp"

        app:cornerRadius="@dimen/dialog_format_radius"

        android:layout_marginStart="@dimen/main_title_text_top_margin"
        android:layout_marginEnd="@dimen/main_title_text_top_margin"
        android:layout_marginTop="@dimen/return_arrow_margin"
        />

    <ImageView
        android:id="@+id/fragment_newUser_ic_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_expand_more_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:layout_constraintBottom_toBottomOf="@id/title"
        android:layout_marginEnd="@dimen/return_arrow_margin"
        android:rotation="-90"/>

    <TextView
        android:layout_width="@dimen/dialog_square"
        android:layout_height="@dimen/dialog_square"
        android:background="@drawable/new_user_wave_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>