<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_format"
    tools:context="ui.AddSavingsDialog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_light_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/amount_to_add_text"
            style="@style/general_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:textColor="#767676"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_weight="0.7"
            android:gravity="center_vertical"
            android:text="@string/amount_to_add_text"
            android:textSize="@dimen/general_text_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_to_add"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/dialog_input_w"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/edit_text_amount_to_add_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_edit_text"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero"
            android:layout_gravity="center"
            android:layout_weight="1.35">

            <Button
                android:id="@+id/save_button_new_saving_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/cancel_button_new_saving_dialog"
                android:text="@string/save_text"
                android:textSize="@dimen/small_text_size"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                android:layout_marginVertical="@dimen/margin_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancel_button_new_saving_dialog"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:textSize="@dimen/small_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button_new_saving_dialog"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginVertical="@dimen/margin_24dp"
                android:layout_marginHorizontal="@dimen/margin_24dp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>